<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:voicesmith="http://voicesmith.jurihock.de" >

    <PreferenceCategory android:title="@string/VolumePreferences" >
        <CheckBoxPreference
                android:defaultValue="true"
                android:key="ForceVolumeLevel"
                android:title="@string/ForceVolumeLevelPreference" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/SoundPreferences" >
        <CheckBoxPreference
                android:defaultValue="true"
                android:key="CorrectOffset"
                android:title="@string/CorrectOffsetPreference" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="SpectralNoiseGate"
            android:title="@string/SpectralNoiseGatePreference" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="BandpassFilter"
            android:title="@string/BandpassFilterPreference" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/AutoMutePreferences" >
        <CheckBoxPreference
                android:defaultValue="false"
                android:key="AutoMute"
                android:title="@string/AutoMuteStatePreference" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/MiscPreferences" >
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="Logging"
            android:title="@string/LoggingPreference" />
        <Preference
            android:title="@string/ResetPreferences"
            android:key="Reset"/>
    </PreferenceCategory>

</PreferenceScreen>